project2/tests/reject/0-gtEq-bad.cc
int main(){
    bool a= false;
    double b=4.0;
    a>=b;
    b>=a;
    a>=a;
    b>=b;
    return 0;
}